<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gsb</string>
    <string name="action_settings">Settings</string>
    <string name="Nom">Nom :</string>
    <string name="Matricule">Matricule :</string>
    <string name="Region">Région :</string>
    <string name="Title">Identification</string>
    <string name="buttonValid">Se connecter</string>
    <string name="buttonEff">Effacer</string>
    <string name="Clear">Effacer</string>
    <string name="Go">Se connecter</string>
    <string name="title_activity_test_">Test_Activity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_test_cursor">TestCursorActivity</string>
    <string name="title_activity_menu_v">MenuV</string>
    <string name="CreerRapport">Creer un nouveau Rapport</string>
    <string name="VoirPraticiens">Voir les Praticiens</string>
    <string name="ConsultRapport">Consulter mes Rapports</string>
    <string name="Logout">Se deconnecter</string>
    <string name="title_activity_menu">Menu Délégué/Responsable</string>
    <string name="btn_creer_rapp">Creer un nouveau Rapport</string>
    <string name="title_activity_menu_dir">MenuDir</string>
    <string name="btn_consult_rapp">Consulter les rapports</string>
    <string name="btn_consult_prat">Consulter les praticiens</string>
    <string name="btn_consult_med">Consulter les médicaments</string>
    <string name="btn_creer_med">Creer médicament</string>
    <string name="btn_creer_prat">Creer praticien</string>
    <string name="btn_autres_vis">Autres visiteurs</string>
    <string name="title_activity_consult_med">ConsultMed</string>
    <string name="Select_med">Sélectionnez un médicament :</string>
    <string name="M">--Médicament--</string>
    <string name="btn_retour">Retour</string>
    <string name="titre_consult_med">Sélectionner un médicament dans la liste de médicaments pour avoir plus d\'informations sur celui-ci.</string>
    <string name="title_activity_consult_rapport">ConsultRapport</string>
    <string name="titre_consult_rapp">Sélectionner une date dans la liste ci-dessous pour récupérer les rapports créés à cette date.</string>
    <string name="title_activity_nouv_rapport">NouvRapport</string>
    <string name="lbl_nouv">(Nouv.)</string>
    <string name="lbl_numrapp">Numéro :</string>
    <string name="hint_dateV">jj/MM/AA</string>
    <string name="lbl_dateV">Date visite :</string>
    <string name="lbl_praticien">Praticien :</string>
    <string name="lbl_motif">Motif :</string>
    <string name="lbl_bilan">Bilan :</string>
    <string name="lbl_offres">Offres :</string>
    <string name="lbl_produit">Produit :</string>
    <string name="bun_ajoutprod">+</string>
    <string name="btn_envoi">Envoyer</string>
    <string name="btn_next">Suivant</string>
    <string name="btn_prev">Précédent</string>
    <string name="lbl_coef">Coeff.</string>
    <string name="lbl_pra_nom">"Nom : "</string>
    <string name="lbl_pra_prenom">"Prenom : "</string>
    <string name="lbl_pra_adresse">"Adresse : "</string>
    <string name="lbl_pra_cp">"Code Postal : "</string>
    <string name="lbl_pra_ville">"Ville : "</string>
    <string name="lbl_pra_coeff">"Coefficient : "</string>
    <string name="lbl_pra_type">"Type : "</string>
    <string name="lbl_pra">Sélectionnez un praticien dans a liste ci-dessous pour avoir pus d\'informations sur celui-ci.</string>
    <string name="title_activity_consult_prat">ConsultPrat</string>
    <string name="title_activity_nouv_prat">NouvPrat</string>
    <string name="title_activity_consult_vis">ConsultVis</string>
    <string name="Lbl_InfoConsultVis">Sélectionner un visiteur dans la liste ci-dessous pour récupérer l\'état de ses activités.</string>
    <string name="title_activity_stats">StatsActivity</string>
    <string name="txt_btn_stats">Stats</string>
    <string name="lbl_Mdp">Mot de passe :</string>

</resources>
