<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/GridLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/textView"
        android:layout_gravity="left"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/button1"
        android:layout_column="0"
        android:layout_gravity="left"
        android:layout_marginBottom="38dp"
        android:text="@string/CreerRapport" />

    <Button
        android:id="@+id/button4"
        android:layout_width="164dp"
        android:layout_column="0"
        android:layout_gravity="left"
        android:layout_row="5"
        android:text="@string/Logout" />

    <Space
        android:layout_column="1"
        android:layout_gravity="fill_vertical"
        android:layout_row="6" />

    <Button
        android:id="@+id/button3"
        android:layout_column="0"
        android:layout_gravity="right|top"
        android:layout_marginBottom="40dp"
        android:layout_row="1"
        android:text="@string/ConsultRapport" />

    <Button
        android:id="@+id/button2"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_marginBottom="34dp"
        android:layout_row="2"
        android:text="@string/VoirPraticiens" />

    <Button
        android:id="@+id/button5"
        android:layout_column="0"
        android:layout_gravity="right|top"
        android:layout_row="2"
        android:text="@string/btn_consult_med" />

    <Button
        android:id="@+id/button6"
        android:layout_column="0"
        android:layout_gravity="right|top"
        android:layout_row="5"
        android:text="@string/btn_creer_prat" />

</GridLayout>